--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -25,5 +24,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
